# homefinder-hs

./: .env  .envrc  .gitignore  docker-compose.yml  flake.nix  homefinder.cabal  justfile
config/: routes.yesodroutes  settings.yml
db/: dev-docker-compose.yml  docker-compose.yml  schema.sql  seed.sql
db/migrations/: 20240324125143_create_home_table.sql
src/: AppEnvironment.hs  Foundation.hs  Main.hs  Migrator.hs  Scraper.hs  Settings.hs  StaticFiles.hs  routes.yesodroutes
src/DB/: Model.hs
src/Handler/: Home.hs
src/Page/: Home.hs
src/Widget/: HomeListItem.hs  Navbar.hs
src/templates/: layout.xhamlet
templates/: layout-html.hamlet  layout-page.hamlet  layout-page.julius  page-home.hamlet  widget-footer.hamlet  widget-home-list-item.hamlet  widget-navbar.hamlet
