cabal-version:      2.4
name:               homefinder
version:            0.1.0.0
copyright:          2024 Malte neuss
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , shower
    , time
    , yesod

  hs-source-dirs:     src
  default-language:   GHC2021

executable homefinder
  import:  shared
  main-is: Main.hs
